--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> Serge Smith - DevOps Portfolio</title>
+    <title> Moses Adika - DevOps Portfolio</title>
     
     <!-- PWA Support -->
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
@@ -271,21 +271,21 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>John Doe</h1>
+            <h1>Moses C. Adika</h1>
             <p>DevOps Engineer</p>
-            <p>john.doe@example.com</p>
-            <p>Total Experience: 8+ Years</p>
+            <p>moses@medstatlog.com</p>
+            <p>Total Experience: 4+ Years</p>
         </header>
 
         <section class="section summary">
             <h2>Professional Summary</h2>
-            <p>Experienced DevOps Engineer with over 8 years in automating, optimizing, and managing cloud infrastructure. Proficient in Docker, Kubernetes, AWS, Terraform, and bash scripting, with a proven track record of implementing CI/CD pipelines and container orchestration. Skilled in Linux server administration and infrastructure as code, delivering scalable and secure solutions.</p>
+            <p>Experienced DevOps Engineer with over 3 years in automating, optimizing, and managing cloud infrastructure. Proficient in Docker, Kubernetes, AWS, Terraform, and bash scripting, with a proven track record of implementing CI/CD pipelines and container orchestration. Skilled in Linux server administration and infrastructure as code, delivering scalable and secure solutions.</p>
         </section>
 
         <section class="section">
             <h2>Education</h2>
             <div class="education-item">
-                <strong>B.S. in Computer Science</strong> - University of Tech City<br>
+                <strong>B.S. in Computer Science</strong> - Avilla College<br>
                 <small>2011-2015</small>
             </div>
             <div class="education-item">
