--- a/templates/index.html
+++ b/templates/index.html
@@ -321,8 +321,8 @@
             <h2>Experience</h2>
             <article class="experience-item">
                 <div class="experience-header">
-                    <div class="experience-title">Nexlify Tech - DevOps Engineer</div>
-                    <div class="experience-date">2021-Present</div>
+                    <div class="experience-title">TD Bank - DevOps Engineer</div>
+                    <div class="experience-date">2022-2024</div>
                 </div>
                 <ul>
                     <li>Automated deployments using Jenkins and Docker for microservices</li>
@@ -336,8 +336,8 @@
             
             <article class="experience-item">
                 <div class="experience-header">
-                    <div class="experience-title">CloudWave Solutions - Cloud Engineer</div>
-                    <div class="experience-date">2018-2021</div>
+                    <div class="experience-title">Triton Technologies - Cloud Engineer</div>
+                    <div class="experience-date">2020 - 2022</div>
                 </div>
                 <ul>
                     <li>Designed AWS architecture for scalable and fault-tolerant applications</li>
@@ -348,6 +348,18 @@
                     <li>Automated S3 bucket creation and policies with Terraform</li>
                 </ul>
             </article>
+
+            <article class="experience-item">
+                <div class="experience-header">
+                    <div class="experience-title">Med Stat Logistics - Systems Administrator</div>
+                    <div class="experience-date">2018 - 2020</div>
+                </div>
+                <ul>
+                    <li>System installation and configuration</li>
+                    <li>System maintenance and monitoring</li>
+                    <li>User and access management</li>
+                    <li>Security management, backup and recovery</li>
+                </ul>
         </section>
 
         <section class="section">
